Archive2/77/72b1d8205db640/output
main.cpp: In member function 'void Core::Render()':
main.cpp:68:22: error: no matching function for call to 'CModel::Draw(const char [4])'
         M->Draw("YOU");
                      ^
main.cpp:68:22: note: candidate is:
main.cpp:20:10: note: void CModel::Draw()
     void Draw(){};
          ^
main.cpp:20:10: note:   candidate expects 0 arguments, 1 provided
